# codif-ape-train

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  MLproject  README.md  conformal_pred.ipynb  export_logs_to_s3.sh  install_r.sh  model_comparison.ipynb  mypy.ini  pylintrc  pyproject.toml  requirements.txt  serving_requirements.txt  setup.sh  test.ipynb  test.py  tests.ipynb  tox.ini  train.py
.claude/: settings.json  settings.local.json
.github/workflows/: build-image.yaml  main.yaml  main.yml
argo-workflows/: camembert-workflow.yaml  train-workflow-gpu.yaml  train-workflow.yaml
bash/: fetch_model_run.sh  mlflow-run.sh  serving_entrypoint.sh
config/: config_fasttext.yaml  config_fasttext1.yaml  config_fasttext10.yaml  config_fasttext11.yaml  config_fasttext12.yaml  config_fasttext13.yaml  config_fasttext14.yaml  config_fasttext15.yaml  config_fasttext16.yaml  config_fasttext17.yaml  config_fasttext18.yaml  config_fasttext19.yaml  config_fasttext2.yaml  config_fasttext20.yaml  config_fasttext21.yaml  config_fasttext22.yaml  config_fasttext23.yaml  config_fasttext24.yaml  config_fasttext25.yaml  config_fasttext26.yaml  config_fasttext27.yaml  config_fasttext28.yaml  config_fasttext29.yaml  config_fasttext3.yaml  config_fasttext31.yaml  config_fasttext32.yaml  config_fasttext33.yaml  config_fasttext34.yaml  config_fasttext35.yaml  config_fasttext36.yaml  config_fasttext37.yaml  config_fasttext38.yaml  config_fasttext39.yaml  config_fasttext4.yaml  config_fasttext40.yaml  config_fasttext41.yaml  config_fasttext42.yaml  config_fasttext43.yaml  config_fasttext44.yaml  config_fasttext5.yaml  (+6 more)
data/: naf2008.csv  naf_extended.csv
data/mappings/: CJ_mapping.json  NAT_mapping.json  TYP_mapping.json  apet_finale_mapping.json  nace2025_mapping.json
doc/: dico_variables.md
graphs/: Clean_db.R  Statistics_Sirene.R  check_API_results.R  plot_evaluation.R  test.R  theme_custom.R
graphs/data_graphs/: Accuracy_lvl.csv  Accuracy_reprise.csv  F1_distrib.csv  F1_distrib_by_cat.csv  GU_TEST_distrib.csv  TOPK_Accuracy.csv
kubernetes/: mlflow_serving.yml  registry-credentials.yml
notebooks/: analysis.ipynb  change_data_labels.py  check_preds_from_logs.ipynb  check_preds_manually.py  data_exploration.ipynb  error_analysis.py  lib_desc.ipynb  log_exploration.ipynb  log_exploration.py  model_exploration.ipynb  newdata_exploration.ipynb  newdata_exploration_dask.ipynb  parse_log.py  pipeline_wrapper.py  pytorch.ipynb  pytorch_no_ft.ipynb  query_mlflow_serve.ipynb  save_preds.ipynb  temp.ipynb  test-mlflow-query.py  test-mlflow.py  test_camembert.ipynb
src/: MLproject  check_preds_manually.py  conda.yaml  constants.py  evaluate.py  extract_logs.py  fast_text_wrapper.py  fetch_model.py  file_system.py  framework_classes.py  generate_mappings.py  inference_time.py  main.py  model_exploration copy.ipynb  model_exploration.ipynb  predict_and_compare.py  preprocess.py  query_fasttext_API.py  save_preds.ipynb  tests.ipynb  train.py  utils.py  zerftg.ipynb
src/api/: mlflow_wrapper.py
src/api_wrapper/: __init__.py  mlflow_wrapper.py
src/base/: dico_1.py  dico_2.py  dico_3.py  dico_4.py  evaluator.py  preprocessor.py  trainer.py
src/camembert/: __init__.py  camembert_evaluator.py  camembert_model.py  camembert_preprocessor.py  camembert_trainer.py  camembert_wrapper.py  custom_pipeline.py
src/configs/: config.yaml  (+1 more)
test/: test_main.py
tests/: test_main.py
utils/: change_data_labels.py  error_analysis.py
(+131 files in other folders)
