[project]
name = "codif-ape-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.5.2",
    "dotenv>=0.9.9",
    "evaluate>=0.4.3",
    "fireducks>=1.2.6",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mlflow>=2.10.2",
    "nltk>=3.8.1",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "pre-commit>=3.6.1",
    "pytest>=8.3.5",
    "pyyaml>=6.0.1",
    "ruff>=0.7.1",
    "s3fs>=2024.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.21.1",
    "torch>=2.2.0",
    "torch-uncertainty>=0.4.3",
    "torchtextclassifiers",
    "tqdm>=4.66.2",
    "transformers>=4.50.0",
    "unidecode>=1.3.8",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.uv.sources]
torchtextclassifiers = { git = "https://github.com/InseeFrLab/torchTextClassifiers.git" }

[project.scripts]
train-ape = "src.train:train"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name="src"
module-root = ""
