[project]
name = "codif-ape-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.5.2",
    "dotenv>=0.9.9",
    "evaluate>=0.4.3",
    "fireducks>=1.2.6",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mlflow>=3.11.1",
    "nltk>=3.9.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "pre-commit>=3.6.1",
    "pytest>=8.3.5",
    "pyyaml>=6.0.1",
    "ruff>=0.7.1",
    "s3fs>=2025.3.2",
    "scikit-learn>=1.4.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "torch-uncertainty>=0.4.3",
    "torchfasttext",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
    "unidecode>=1.3.8",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.uv.sources]
torchfasttext = { git = "https://github.com/InseeFrLab/torch-fastText.git", branch = "main" }

[dependency-groups]
dev = []
