[project]
name = "codif-ape-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "python-dotenv>=1.2.2",
    "evaluate>=0.4.6",
    "fireducks>=1.4.4",
    "hydra-core>=1.3.3",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.5",
    "mlflow>=3.14.0",
    "nltk>=3.9.4",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "pip>=26.1.2",
    "plotly>=6.8.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.20",
    "s3fs>=2026.4.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.12.1",
    "torchfasttext",
    "torch-uncertainty>=0.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "unidecode>=1.4.0",
]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.uv.sources]
torchfasttext = { git = "https://github.com/InseeFrLab/torch-fastText.git", branch = "main" }

[dependency-groups]
dev = []
